--- a/style.html
+++ b/style.html
@@ -679,6 +679,151 @@
             z-index: calc(var(--z-alert) + 1) !important;
         }
 
+        .modal-transfer-popup {
+            padding: 20px 22px 18px;
+            border-radius: 14px;
+            border: 1px solid color-mix(in srgb, var(--dark-color) 8%, transparent);
+            box-shadow: 0 18px 46px rgba(15, 23, 42, 0.18);
+            background: color-mix(in srgb, var(--surface-color) 88%, white 12%);
+        }
+
+        .modal-transfer {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+            text-align: left;
+        }
+
+        .modal-transfer-header {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+            padding: 12px;
+            border-radius: 12px;
+            border: 1px solid color-mix(in srgb, var(--primary-color) 18%, transparent);
+            background: color-mix(in srgb, var(--primary-color) 10%, var(--surface-color) 90%);
+        }
+
+        .modal-transfer-icon {
+            width: 46px;
+            height: 46px;
+            border-radius: 10px;
+            display: grid;
+            place-items: center;
+            background: linear-gradient(135deg, color-mix(in srgb, var(--primary-color) 80%, #0ea5e9 20%), var(--primary-color));
+            color: #fff;
+            box-shadow: 0 10px 20px rgba(14, 165, 233, 0.25);
+        }
+
+        .modal-transfer-text {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+
+        .modal-transfer-title {
+            margin: 0;
+            font-size: 1.05rem;
+            font-weight: 700;
+            color: var(--dark-color);
+        }
+
+        .modal-transfer-subtitle {
+            margin: 0;
+            color: var(--muted-color);
+            font-size: 0.95rem;
+            line-height: 1.45;
+        }
+
+        .modal-transfer-group {
+            gap: 8px;
+        }
+
+        .modal-transfer-label {
+            font-size: 0.9rem;
+            font-weight: 700;
+            color: var(--dark-color);
+        }
+
+        .modal-transfer-select {
+            position: relative;
+            display: flex;
+            align-items: center;
+            background: color-mix(in srgb, var(--light-color) 75%, white 25%);
+            border-radius: 12px;
+            border: 1px solid color-mix(in srgb, var(--dark-color) 10%, transparent);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.45), 0 10px 30px rgba(15, 23, 42, 0.08);
+            padding: 2px;
+        }
+
+        .modal-transfer-select i {
+            color: var(--primary-color);
+            margin-left: 12px;
+        }
+
+        .modal-transfer-field {
+            width: 100%;
+            border: none;
+            background: transparent;
+            padding: 12px 40px 12px 12px;
+            border-radius: 10px;
+            color: var(--dark-color);
+            font-weight: 600;
+            font-size: 0.98rem;
+            appearance: none;
+            outline: none;
+        }
+
+        .modal-transfer-field:focus-visible {
+            box-shadow: 0 0 0 3px color-mix(in srgb, var(--primary-color) 25%, transparent);
+        }
+
+        .modal-transfer-caret {
+            position: absolute;
+            right: 12px;
+            color: var(--muted-color);
+            pointer-events: none;
+        }
+
+        .modal-transfer-hint {
+            margin: 0;
+            font-size: 0.85rem;
+            color: var(--muted-color);
+        }
+
+        .modal-transfer-confirm,
+        .modal-transfer-cancel {
+            border-radius: 12px !important;
+            padding: 11px 18px !important;
+            font-weight: 700;
+            font-size: 0.95rem;
+            min-width: 120px;
+        }
+
+        .modal-transfer-confirm {
+            background: var(--primary-color) !important;
+            color: #fff !important;
+            border: none !important;
+            box-shadow: 0 10px 24px rgba(14, 165, 233, 0.25);
+        }
+
+        .modal-transfer-confirm:focus-visible,
+        .modal-transfer-confirm:hover {
+            filter: brightness(0.95);
+        }
+
+        .modal-transfer-cancel {
+            background: color-mix(in srgb, var(--surface-color) 90%, white 10%) !important;
+            color: var(--dark-color) !important;
+            border: 1px solid var(--border-color) !important;
+            box-shadow: none !important;
+        }
+
+        .modal-transfer-cancel:hover,
+        .modal-transfer-cancel:focus-visible {
+            background: color-mix(in srgb, var(--light-color) 85%, white 15%) !important;
+        }
+
         .swal-form-grid {
             display: flex;
             flex-direction: column;
