--- a/style.html
+++ b/style.html
@@ -782,7 +782,8 @@
             position: absolute;
             right: 12px;
             color: var(--muted-color);
-            pointer-events: none;
+            pointer-events: auto;
+            cursor: pointer;
         }
 
         .modal-transfer-hint {
