--- a/script.html
+++ b/script.html
@@ -8640,7 +8640,14 @@
             });
 
             try {
-                const resultadoFinalizacao = await callGoogleScript('finalizarTermo', {
+                const detectarErroTermoNaoEncontrado = (mensagem) => {
+                    if (!mensagem) return false;
+                    const texto = mensagem.toString().toLowerCase();
+                    const textoSemAcento = texto.normalize('NFD').replace(/[\u0300-\u036f]/g, '');
+                    return texto.includes('termo não localizado') || textoSemAcento.includes('termo nao localizado');
+                };
+
+                const resultadoUnificado = await callGoogleScript('finalizarELiberarArmario', {
                     armarioId: identificadores?.idPlanilha || '',
                     numeroArmario: identificadores?.numeroArmario || '',
                     metodo,
@@ -8653,37 +8660,32 @@
                     tipo: identificadores?.tipo || ''
                 });
 
-                if (!resultadoFinalizacao.success) {
-                    const mensagemErro = (resultadoFinalizacao.error || '').toString();
-                    const erroNormalizado = mensagemErro.toLowerCase();
-                    const erroSemAcento = erroNormalizado.normalize('NFD').replace(/[\u0300-\u036f]/g, '');
-                    const termoNaoEncontrado = erroNormalizado.includes('termo não localizado')
-                        || erroSemAcento.includes('termo nao localizado');
+                const finalizacao = resultadoUnificado?.finalizacao || {};
+                const liberacao = resultadoUnificado?.liberacao || {};
+                const termoNaoLocalizado = resultadoUnificado?.termoNaoLocalizado
+                    || detectarErroTermoNaoEncontrado(finalizacao.error || resultadoUnificado?.error);
 
-                    if (!termoNaoEncontrado) {
+                if (!resultadoUnificado || !resultadoUnificado.success) {
+                    if (resultadoUnificado?.etapa === 'finalizacao' && termoNaoLocalizado) {
+                        mensagemSucesso = 'Armário liberado com sucesso. Termo não localizado para finalização.';
+                    } else {
                         atualizarEtapa('erro');
                         await aguardarTransicao();
                         Swal.close();
-                        notificarErroPadrao(resultadoFinalizacao, 'Não foi possível finalizar o termo.');
+                        notificarErroPadrao(resultadoUnificado || { success: false, error: 'Erro ao finalizar e liberar armário' });
                         return;
                     }
-
-                    mensagemSucesso = 'Armário liberado com sucesso. Termo não localizado para finalização.';
                 }
 
-                atualizarEtapa('concluida');
-
-                const resultadoLiberacao = await callGoogleScript('liberarArmario', {
-                    id: identificadores?.idPlanilha || '',
-                    tipo: 'acompanhante',
-                    numero: identificadores?.numeroArmario || ''
-                });
-
-                if (!resultadoLiberacao.success) {
+                if (!liberacao.success) {
                     atualizarEtapa('erro');
                     Swal.close();
-                    notificarErroPadrao(resultadoLiberacao);
+                    notificarErroPadrao(liberacao, 'Não foi possível liberar o armário.');
                     return;
+                }
+
+                if (!finalizacao.success && termoNaoLocalizado) {
+                    mensagemSucesso = 'Armário liberado com sucesso. Termo não localizado para finalização.';
                 }
 
                 atualizarEtapa('concluida');
