--- a/style.html
+++ b/style.html
@@ -3596,6 +3596,10 @@
             flex: 1;
             min-width: 0;
         }
+        .prontuario-input-group .wizard-input {
+            flex: 1;
+            min-width: 0;
+        }
         .prontuario-input-group .btn {
             white-space: nowrap;
             display: inline-flex;
